(env
 (dev
  (flags
   (:standard -w -50 -w -26 -w -32 -w -27))))

(executables
 (names 1_non_deterministic)
 (modules 1_non_deterministic)
 (libraries eio eio_main))

(executables
 (names 2_semaphore)
 (modules 2_semaphore)
 (libraries eio eio_main))

(executables
 (names 3_sema_signal)
 (modules 3_sema_signal)
 (libraries eio eio_main))

(executables
 (names 3_3_rendezvous)
 (modules 3_3_rendezvous)
 (libraries eio eio_main))

(executables
 (names semaphore_for_mutual_exclusion)
 (modules semaphore_for_mutual_exclusion)
 (libraries eio eio_main))

(executables
 (names 3_4_mutex)
 (modules 3_4_mutex)
 (libraries eio eio_main))

(executables
 (names 3_6_barrier)
 (modules 3_6_barrier)
 (libraries eio eio_main))

(executables
 (names 3_6_reusable_barrier)
 (modules 3_6_reusable_barrier)
 (libraries eio eio_main))

(executables
 (names 3_8_queue)
 (modules 3_8_queue)
 (libraries eio eio_main domainslib))

(executables
 (names 3_8_queue_exclusive)
 (modules 3_8_queue_exclusive)
 (libraries eio eio_main domainslib))

(executables
 (names 4_1_producer_consumer)
 (modules 4_1_producer_consumer)
 (libraries eio eio_main domainslib))

(executables
 (names 4_1_finite_buffer)
 (modules 4_1_finite_buffer)
 (libraries eio eio_main domainslib))
